--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="transtour app"
     />
-    <title>React App</title>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <title>transtour</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
